--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>typcraft</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     * { box-sizing: border-box; }
   </style>
